--- a/.github/workflows/wfone.yml
+++ b/.github/workflows/wfone.yml
@@ -16,3 +16,5 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
+      - name: github context
+        run: echo ${{ github }}
