--- a/.github/workflows/wfone.yml
+++ b/.github/workflows/wfone.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
       - name: github context
-        run: echo ${{ toJSON(github) }}
+        run: echo '${{ toJSON(github) }}'
