--- a/.github/workflows/photoflash.yml
+++ b/.github/workflows/photoflash.yml
@@ -8,6 +8,68 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set Screen Resolution
+        run: |
+          Add-Type -TypeDefinition @"
+            using System;
+            using System.Runtime.InteropServices;
+            public class Display {
+                [DllImport("user32.dll")]
+                public static extern long ChangeDisplaySettings(ref DEVMODE devMode, int flags);
+                [DllImport("user32.dll")]
+                public static extern bool EnumDisplaySettings(string deviceName, int modeNum, ref DEVMODE devMode);
+                public const int ENUM_CURRENT_SETTINGS = -1;
+                public const int CDS_UPDATEREGISTRY = 0x01;
+                public const int DISP_CHANGE_SUCCESSFUL = 0;
+                [StructLayout(LayoutKind.Sequential)]
+                public struct DEVMODE {
+                    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
+                    public string dmDeviceName;
+                    public short dmSpecVersion;
+                    public short dmDriverVersion;
+                    public short dmSize;
+                    public short dmDriverExtra;
+                    public int dmFields;
+                    public int dmPositionX;
+                    public int dmPositionY;
+                    public int dmDisplayOrientation;
+                    public int dmDisplayFixedOutput;
+                    public short dmColor;
+                    public short dmDuplex;
+                    public short dmYResolution;
+                    public short dmTTOption;
+                    public short dmCollate;
+                    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
+                    public string dmFormName;
+                    public short dmLogPixels;
+                    public int dmBitsPerPel;
+                    public int dmPelsWidth;
+                    public int dmPelsHeight;
+                    public int dmDisplayFlags;
+                    public int dmDisplayFrequency;
+                    public int dmICMMethod;
+                    public int dmICMIntent;
+                    public int dmMediaType;
+                    public int dmDitherType;
+                    public int dmReserved1;
+                    public int dmReserved2;
+                    public int dmPanningWidth;
+                    public int dmPanningHeight;
+                }
+                public static bool SetResolution(int width, int height) {
+                    DEVMODE dm = new DEVMODE();
+                    dm.dmSize = (short)Marshal.SizeOf(typeof(DEVMODE));
+                    if (0 != EnumDisplaySettings(null, ENUM_CURRENT_SETTINGS, ref dm)) {
+                        dm.dmPelsWidth = width;
+                        dm.dmPelsHeight = height;
+                        int iRet = ChangeDisplaySettings(ref dm, CDS_UPDATEREGISTRY);
+                        return iRet == DISP_CHANGE_SUCCESSFUL;
+                    }
+                    return false;
+                }
+            }
+          "@
+            [Display]::SetResolution(1920, 1080)
       - name: Take Desktop Screenshot
         run: |
           Add-Type -AssemblyName System.Windows.Forms
