--- a/.github/workflows/ubuntu_chrome_upgrade.yml
+++ b/.github/workflows/ubuntu_chrome_upgrade.yml
@@ -11,6 +11,19 @@ jobs:
       #     set -ex
       #     wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
       #     sudo apt install ./google-chrome-stable_current_amd64.deb
+      - name: Check out repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install selenium
+          
       - name: Install Chrome
         run: |
           sudo apt-get update
@@ -22,12 +35,14 @@ jobs:
 
       - name: Install ChromeDriver
         run: |
-          CHROME_VERSION=$(google-chrome --version | sed 's/Google Chrome //; s/ .*//')
-          CHROMEDRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION)
-          wget -N https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip
-          unzip chromedriver_linux64.zip -d $HOME
-          rm chromedriver_linux64.zip
-          sudo mv -f $HOME/chromedriver /usr/local/bin/chromedriver
+          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+\.\d+')
+          echo "Detected Chrome version: $CHROME_VERSION"
+
+          # Download ChromeDriver from the updated URL
+          wget -N https://storage.googleapis.com/chrome-for-testing-public/$CHROME_VERSION/linux64/chromedriver-linux64.zip -O chromedriver.zip
+          unzip chromedriver.zip -d $HOME
+          rm chromedriver.zip
+          sudo mv -f $HOME/chromedriver-linux64 /usr/local/bin/chromedriver
           sudo chmod +x /usr/local/bin/chromedriver
           
       - name: Print Google Chrome details
