--- a/.github/workflows/upgrade_chromedriver2.yml
+++ b/.github/workflows/upgrade_chromedriver2.yml
@@ -18,29 +18,18 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install selenium chromedriver-autoinstaller
-          
-      - name: Install Chrome
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget gnupg
-          wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-          sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
-          google-chrome --version  # Log Chrome version
+          pip install selenium
 
-      - name: Install ChromeDriver
-        run: |
-          # Remove any existing ChromeDriver to avoid conflicts
-          sudo rm -f /usr/local/bin/chromedriver
-          
-          python -c "import chromedriver_autoinstaller; chromedriver_autoinstaller.install()"
-          
-          # Verify the ChromeDriver version
-          chromedriver --version
-          
+      - name: Install google chrome and driver
+        id: setup-chrome
+        uses: browser-actions/setup-chrome@v1
+        with:
+          chrome-version: 'stable'
+          install-chromedriver: true
+                  
       - name: Print Google Chrome and ChromeDriver details
         run: |
           google-chrome --version
           chromedriver --version
+          echo "Chrome installation path: ${{ steps.setup-chrome.outputs.chrome-path }}"
+          echo "ChromeDriver installation path: ${{ steps.setup-chrome.outputs.chromedriver-path }}"
