--- a/.github/workflows/upgrade_chromedriver2.yml
+++ b/.github/workflows/upgrade_chromedriver2.yml
@@ -20,6 +20,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install selenium
 
+      - name: Uninstall existing Google Chrome (if any)
+        run: |
+          sudo apt-get remove --purge google-chrome-stable
+          sudo apt-get autoremove
+
       - name: Install google chrome and driver
         id: setup-chrome
         uses: browser-actions/setup-chrome@v1
