--- a/.github/workflows/upgrade_chromedriver2.yml
+++ b/.github/workflows/upgrade_chromedriver2.yml
@@ -22,7 +22,8 @@ jobs:
 
       - name: Upgrade Google Chrome
         run: |
-          sudo apt –only-upgrade install google-chrome-stable
+          sudo apt-get update
+          sudo apt --only-upgrade install google-chrome-stable
 
       - name: Magic of web_driver_manager
         run: |
