--- a/.github/workflows/onex_caller.yml
+++ b/.github/workflows/onex_caller.yml
@@ -9,7 +9,7 @@ on:
         default: "silent"
       fl-home:
         description: 'Home folder for FL'
-        default: "c:\temp"
+        default: "c:\\temp"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
