--- a/.github/workflows/test_date.yml
+++ b/.github/workflows/test_date.yml
@@ -14,6 +14,13 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script - $(date + '%d-%m-%Y_%H-%M-%S')
         run: echo Hello, world!
+        
+      - name: Run a script with input parameters
+        id: example_step
+        run: |
+          echo "Input Parameter 1: ${{ env.param1 }}"
+        env:
+          param1: $(date + '%d-%m-%Y_%H-%M-%S')
   two:
     runs-on: windows-latest
 
