--- a/.github/workflows/test_python_windows.yml
+++ b/.github/workflows/test_python_windows.yml
@@ -19,5 +19,9 @@ jobs:
         run:
           python --version
           python -m pip install --upgrade pip
-          pip install pytest-dependency
+          pip install pytest pytest-dependency
+
+      - name: Run tests
+        run: |
+          pytest -v test_deps.py
 
