--- a/.github/workflows/test_python_windows.yml
+++ b/.github/workflows/test_python_windows.yml
@@ -16,7 +16,7 @@ jobs:
           python-version: '3.12'
 
       - name: Install Python Packages
-        run:
+        run: |
           python --version
           python -m pip install --upgrade pip
           pip install pytest pytest-dependency
