--- a/.github/workflows/test_python_windows.yml
+++ b/.github/workflows/test_python_windows.yml
@@ -21,8 +21,9 @@ jobs:
           python -m pip install --upgrade pip
           # Downgrade setuptools temporarily to handle the legacy build process
           pip install pytest
-          python -m pip install "setuptools<70.0.0"
-          pip install pytest-dependency
+          python -m pip install "setuptools<70.0.0" "wheel"
+          # The magic flag: --no-build-isolation
+          python -m pip install pytest-dependency --no-build-isolation
 
       - name: Run tests
         run: |
