--- a/.github/workflows/test_python_windows.yml
+++ b/.github/workflows/test_python_windows.yml
@@ -27,5 +27,6 @@ jobs:
 
       - name: Run tests
         run: |
+          python -m pip install pytest-dependency
           pytest -v tests/test_deps.py
 
